--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -43,6 +43,14 @@
  year = {1997}
 }
 
+@book{Brenner2008,
+ author = {Brenner, Susanne C and Scott, L Ridgway and Scott, L Ridgway},
+ publisher = {Springer},
+ title = {The mathematical theory of finite element methods},
+ volume = {3},
+ year = {2008}
+}
+
 @article{Cooley1965,
  author = {Cooley, James W. and Tukey, John W.},
  doi = {10.1090/S0025-5718-1965-0178586-1},
@@ -52,6 +60,12 @@
  url = {https://doi.org/10.1090/S0025-5718-1965-0178586-1},
  volume = {19},
  year = {1965}
+}
+
+@phdthesis{Elman1982,
+ author = {Elman, Howard C.},
+ title = {Iterative methods for large, sparse, nonsymmetric systems of linear equations},
+ year = {1982}
 }
 
 @article{Fiedler1973,
@@ -246,6 +260,17 @@
  title = {Discrete Cosine Transform: Algorithms, Advantages, Applications},
  url = {https://doi.org/10.1016/C2009-0-22279-3},
  year = {1990}
+}
+
+@article{Saad1986,
+ author = {Saad, Youcef and Schultz, Martin H. },
+ doi = {10.1137/0907058},
+ journal = {Siam Journal on Scientific and Statistical Computing},
+ pages = {856-869},
+ title = {GMRES: a generalized minimal residual algorithm for solving nonsymmetric linear systems},
+ url = {https://doi.org/10.1137/0907058},
+ volume = {7},
+ year = {1986}
 }
 
 @book{Saad2003,
