--- a/Front & Back Matter/abbreviations.tex
+++ b/Front & Back Matter/abbreviations.tex
@@ -15,5 +15,8 @@ GLS & Generalised Least Squares \\
 DCT & Discrete Cosine Transform \\
 FCT & Fast Cosine Transform \\
 FFT & Fast Fourier Transform \\
-
+PSD & Positive Semi-Definite \\
+SIM & Stationary Iterative Method \\
+CGM & Conjugate Gradient Method \\
+SNR & Signal to Noise Ratio 
 }
