--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -61,8 +61,10 @@
 \newcommand{\OMEGA}{\mathbf{\Omega}}
 
 \newcommand{\y}{\mathbf{y}}
+\newcommand{\bb}{\mathbf{b}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\f}{\mathbf{f}}
+\newcommand{\rr}{\mathbf{r}}
 \newcommand{\s}{\mathbf{s}}
 \newcommand{\z}{\mathbf{z}}
 \newcommand{\e}{\mathbf{e}}
