--- a/Front & Back Matter/symbols.tex
+++ b/Front & Back Matter/symbols.tex
@@ -43,7 +43,7 @@ $\F$  & A predicted graph signal \\
 $\G$  & A spectral scaling matrix \\
 $\HH$ & A graph filter \textit{or} Hessian matrix \\
 $\I_N$  & The $(N \times N)$ identity matrix \\
-$\J_N$  & An $(N \times N)$ matrix of ones \\
+$\OO_N$  & An $(N \times N)$ matrix of ones \\
 $\K$  & A kernel (Gram) matrix \\
 $\LL$ & The graph Laplacian \\
 $\Ss$ & A binary selection matrix \\
