--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -38,6 +38,7 @@
 \newcommand{\G}{\mathbf{G}}
 \newcommand{\HH}{\mathbf{H}}
 \newcommand{\I}{\mathbf{I}}
+\newcommand{\OO}{\mathbf{O}}
 \newcommand{\J}{\mathbf{J}}
 \newcommand{\K}{\mathbf{K}}
 \newcommand{\LL}{\mathbf{L}}
@@ -60,6 +61,7 @@
 \newcommand{\PHI}{\mathbf{\Phi}}
 \newcommand{\OMEGA}{\mathbf{\Omega}}
 
+
 \newcommand{\y}{\mathbf{y}}
 \newcommand{\bb}{\mathbf{b}}
 \newcommand{\x}{\mathbf{x}}
@@ -71,6 +73,8 @@
 \newcommand{\g}{\mathbf{g}}
 \newcommand{\tee}{\mathbf{t}}
 \newcommand{\ve}{\mathbf{v}}
+\newcommand{\uu}{\mathbf{u}}
+
 
 
 \newcommand{\muu}{\boldsymbol{\mu}}
