--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -62,6 +62,15 @@
  year = {1965}
 }
 
+@book{Demmel1997,
+ address = {Philadelphia},
+ author = {Demmel, James W.},
+ isbn = {978-0-89871-389-3},
+ publisher = {Society for Industrial and Applied Mathematics},
+ title = {Applied numerical linear algebra},
+ year = {1997}
+}
+
 @phdthesis{Elman1982,
  author = {Elman, Howard C.},
  title = {Iterative methods for large, sparse, nonsymmetric systems of linear equations},
