--- a/Setup/packages.tex
+++ b/Setup/packages.tex
@@ -4,7 +4,8 @@
 \usepackage{algpseudocode,
 			algorithm, 
 			multirow, 
-			cleveref}
+			cleveref, 
+			booktabs}
 
 \usepackage[table]{xcolor}
 
