--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -5,6 +5,9 @@
 \newcommand{\vecc}[1]{\text{\textup{vec}}(#1)}
 \newcommand{\Vecc}[1]{\text{\textup{vec}}\big(#1\big)}
 \newcommand{\VECC}[1]{\text{\textup{vec}}\Big(#1\Big)}
+\newcommand{\vecrm}[1]{\text{\textup{vec}}_{\text{\textup{RM}}}(#1)}
+\newcommand{\Vecrm}[1]{\text{\textup{vec}}_{\text{\textup{RM}}}\big(#1\big)}
+\newcommand{\VECRM}[1]{\text{\textup{vec}}_{\text{\textup{RM}}}\Big(#1\Big)}
 \newcommand{\mat}[1]{\text{\textup{mat}}(#1)}
 \newcommand{\Mat}[1]{\text{\textup{mat}}\big(#1\big)}
 \newcommand{\MAT}[1]{\text{\textup{mat}}\Big(#1\Big)}
