--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -112,6 +112,29 @@
  year = {1997}
 }
 
+@article{Harris2020,
+ author = {Harris, Charles R. and K. Jarrod Millman and St{\'{e}}fan J.
+van der Walt and Ralf Gommers and Pauli Virtanen and David
+Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+Travis E. Oliphant},
+ doi = {10.1038/s41586-020-2649-2},
+ journal = {Nature},
+ month = {September},
+ number = {7825},
+ pages = {357--362},
+ publisher = {Springer Science and Business Media {LLC}},
+ title = {Array programming with {NumPy}},
+ url = {https://doi.org/10.1038/s41586-020-2649-2},
+ volume = {585},
+ year = {2020}
+}
+
 @incollection{Harzheim2005,
  address = {New York},
  author = {Harzheim, Egbert},
