--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,14 @@
+@book{Abraham1988,
+ address = {New York},
+ author = {Abraham, Ralph and Marsden, Jerrold E. and Rațiu, Tudor S.},
+ edition = {2nd ed},
+ isbn = {978-0-387-96790-5},
+ language = {eng},
+ publisher = {Springer-Verlag},
+ title = {Manifolds, tensor analysis, and applications},
+ year = {1988}
+}
+
 @article{Ahmed1974,
  author = {Ahmed, N. and Natarajan, T. and Rao, K.R.},
  doi = {10.1109/T-C.1974.223784},
@@ -8,6 +19,31 @@
  url = {https://doi.org/10.1109/T-C.1974.223784},
  volume = {C-23},
  year = {1974}
+}
+
+@article{Antonian2023,
+ author = {Antonian, Edward and Peters, Gareth W.  and Chantler, Michael },
+ doi = {10.21105/joss.04900},
+ journal = {Journal of Open Source Software},
+ number = {81},
+ pages = {4900},
+ publisher = {The Open Journal},
+ title = {PyKronecker: A Python Library for the Efficient Manipulation of Kronecker Products and Related Structures},
+ url = {https://doi.org/10.21105/joss.04900},
+ volume = {8},
+ year = {2023}
+}
+
+@book{Aubert2006,
+ address = {New York, NY},
+ author = {Aubert, Gilles and Kornprobst, Pierre},
+ edition = {2},
+ language = {en},
+ month = {August},
+ publisher = {Springer},
+ series = {Applied mathematical sciences},
+ title = {Mathematical problems in image processing},
+ year = {2006}
 }
 
 @article{Barik2015,
@@ -51,6 +87,31 @@
  year = {2008}
 }
 
+@inbook{Cammoun2009,
+ address = {London},
+ author = {Cammoun, L.
+and Casta{\~{n}}o-Moraga, C.A.
+and Mu{\~{n}}oz-Moreno, E.
+and Sosa-Cabrera, D.
+and Acar, B.
+and Rodriguez-Florido, M.A.
+and Brun, A.
+and Knutsson, H.
+and Thiran, J. P.},
+ booktitle = {Tensors in Image Processing and Computer Vision},
+ doi = {10.1007/978-1-84882-299-3_1},
+ editor = {Aja-Fern{\'a}ndez, Santiago
+and de Luis Garc{\'i}a, Rodrigo
+and Tao, Dacheng
+and Li, Xuelong},
+ isbn = {978-1-84882-299-3},
+ pages = {1--32},
+ publisher = {Springer London},
+ title = {A Review of Tensors and Tensor Signal Processing},
+ url = {https://doi.org/10.1007/978-1-84882-299-3_1},
+ year = {2009}
+}
+
 @article{Cooley1965,
  author = {Cooley, James W. and Tukey, John W.},
  doi = {10.1090/S0025-5718-1965-0178586-1},
@@ -60,6 +121,18 @@
  url = {https://doi.org/10.1090/S0025-5718-1965-0178586-1},
  volume = {19},
  year = {1965}
+}
+
+@article{DeBoor1979,
+ author = {DeBoor, Carl},
+ doi = {10.1145/355826.355831},
+ issue = {2},
+ journal = {ACM Transactions on Mathematmal Software},
+ pages = {173-182},
+ title = {Efficient Computer Manipulation of Tensor Products},
+ url = {https://doi.org/10.1145/355826.355831},
+ volume = {5},
+ year = {1979}
 }
 
 @book{Demmel1997,
@@ -77,6 +150,23 @@
  year = {1982}
 }
 
+@article{Fackler2019,
+ address = {New York, NY, USA},
+ articleno = {22},
+ author = {Fackler, Paul L.},
+ doi = {10.1145/3291041},
+ issue_date = {June 2019},
+ journal = {ACM Trans. Math. Softw.},
+ month = {may},
+ number = {2},
+ numpages = {9},
+ publisher = {Association for Computing Machinery},
+ title = {Algorithm 993: Efficient Computation with Kronecker Products},
+ url = {https://doi.org/10.1145/3291041},
+ volume = {45},
+ year = {2019}
+}
+
 @article{Fiedler1973,
  author = {Fiedler, Miroslav},
  doi = {10.21136/CMJ.1973.101168},
@@ -86,6 +176,19 @@
  url = {https://doi.org/10.21136/CMJ.1973.101168},
  volume = {23},
  year = {1973}
+}
+
+@article{Granata1992,
+ author = {Granata, John and Conner, Michael and Tolimieri, Richard},
+ doi = {10.1109/78.175736},
+ issn = {19410476},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {12},
+ pages = {2921--2930},
+ title = {Recursive {Fast} {Algorithms} and the {Role} of the {Tensor} {Product}},
+ url = {https://doi.org/10.1109/78.175736},
+ volume = {40},
+ year = {1992}
 }
 
 @article{Grassi2018,
@@ -284,6 +387,17 @@ Travis E. Oliphant},
  year = {2018}
 }
 
+@article{Pereyra1973,
+ author = {Pereyra, V{\'i}ctor and Scherer, Godela},
+ doi = {10.1090/s0025-5718-1973-0395196-6},
+ journal = {Mathematics of Computation},
+ pages = {595-605},
+ title = {Efficient Computer Manipulation of Tensor Products with Applications to Multidimensional Approximation},
+ url = {https://doi.org/10.1090/s0025-5718-1973-0395196-6},
+ volume = {27},
+ year = {1973}
+}
+
 @book{Rao1990,
  author = {Rao, K.R. and Yip, P.},
  doi = {10.1016/C2009-0-22279-3},
@@ -292,6 +406,24 @@ Travis E. Oliphant},
  title = {Discrete Cosine Transform: Algorithms, Advantages, Applications},
  url = {https://doi.org/10.1016/C2009-0-22279-3},
  year = {1990}
+}
+
+@book{Renteln2013,
+ author = {Renteln, P.},
+ isbn = {9781107659698},
+ publisher = {Cambridge University Press},
+ title = {Manifolds, Tensors, and Forms: An Introduction for Mathematicians and Physicists},
+ url = {https://books.google.co.uk/books?id=uJWGAgAAQBAJ},
+ year = {2013}
+}
+
+@article{Roth1934,
+ author = {Roth, W E},
+ doi = {10.2307/3609497},
+ journal = {Bulletin of the American Mathematical Society},
+ title = {On Direct Product Matrices},
+ url = {https://doi.org/10.2307/3609497},
+ year = {1934}
 }
 
 @article{Saad1986,
@@ -340,5 +472,35 @@ Travis E. Oliphant},
  title = {The emerging field of signal processing on graphs: Extending high-dimensional data analysis to networks and other irregular domains},
  url = {https://doi.org/10.1109/MSP.2012.2235192},
  volume = {30},
+ year = {2013}
+}
+
+@article{Stanley2020,
+ author = {Stanley, Jay S. and Chi, Eric C. and Mishne, Gal},
+ doi = {10.1109/MSP.2020.3013555},
+ issn = {1053-5888, 1558-0792},
+ journal = {IEEE Signal Processing Magazine},
+ language = {en},
+ month = {November},
+ number = {6},
+ pages = {160--173},
+ shorttitle = {Multiway {Graph} {Signal} {Processing} on {Tensors}},
+ title = {Multiway {Graph} {Signal} {Processing} on {Tensors}: {Integrative} {Analysis} of {Irregular} {Geometries}},
+ url = {https://doi.org/10.1109/MSP.2020.3013555},
+ urldate = {2022-11-04},
+ volume = {37},
+ year = {2020}
+}
+
+@book{Tolimieri2013,
+ address = {New York, NY},
+ author = {Tolimieri, Richard and An, Myoung and Lu, Chao},
+ edition = {1989},
+ editor = {Burrus, C S},
+ language = {en},
+ month = {June},
+ publisher = {Springer},
+ series = {Signal Processing and Digital Filtering},
+ title = {Algorithms for discrete Fourier transform and convolution},
  year = {2013}
 }
