--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -11,6 +11,9 @@
 \newcommand{\mat}[1]{\text{\textup{mat}}(#1)}
 \newcommand{\Mat}[1]{\text{\textup{mat}}\big(#1\big)}
 \newcommand{\MAT}[1]{\text{\textup{mat}}\Big(#1\Big)}
+\newcommand{\matrm }[1]{\text{\textup{mat}}_{\text{\textup{RM}}}(#1)}
+\newcommand{\Matrm }[1]{\text{\textup{mat}}_{\text{\textup{RM}}}\big(#1\big)}
+\newcommand{\MATRM}[1]{\text{\textup{mat}}_{\text{\textup{RM}}}\Big(#1\Big)}
 \newcommand{\diag}[1]{\text{\textup{diag}}(#1)}
 \newcommand{\Diag}[1]{\text{\textup{diag}}\big(#1\big)}
 \newcommand{\DIAG}[1]{\text{\textup{diag}}\Big(#1\Big)}
@@ -85,6 +88,8 @@
 \newcommand{\thetaa}{\boldsymbol{\theta}}
 \newcommand{\betaa}{\boldsymbol{\beta}}
 \newcommand{\lambdaa}{\boldsymbol{\lambda}}
+
+\DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
 \newcommand{\note}[2]{\begin{tcolorbox}[colback=gray!5!white,
     colframe=gray!50!black,
