--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -2,26 +2,23 @@
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
 
 
-\newcommand{\vecc}[1]{\text{\textup{vec}}(#1)}
-\newcommand{\Vecc}[1]{\text{\textup{vec}}\big(#1\big)}
-\newcommand{\VECC}[1]{\text{\textup{vec}}\Big(#1\Big)}
-\newcommand{\vecrm}[1]{\text{\textup{vec}}_{\text{\textup{RM}}}(#1)}
-\newcommand{\Vecrm}[1]{\text{\textup{vec}}_{\text{\textup{RM}}}\big(#1\big)}
-\newcommand{\VECRM}[1]{\text{\textup{vec}}_{\text{\textup{RM}}}\Big(#1\Big)}
-\newcommand{\mat}[1]{\text{\textup{mat}}(#1)}
-\newcommand{\Mat}[1]{\text{\textup{mat}}\big(#1\big)}
-\newcommand{\MAT}[1]{\text{\textup{mat}}\Big(#1\Big)}
-\newcommand{\matrm }[1]{\text{\textup{mat}}_{\text{\textup{RM}}}(#1)}
-\newcommand{\Matrm }[1]{\text{\textup{mat}}_{\text{\textup{RM}}}\big(#1\big)}
-\newcommand{\MATRM}[1]{\text{\textup{mat}}_{\text{\textup{RM}}}\Big(#1\Big)}
-\newcommand{\diag}[1]{\text{\textup{diag}}(#1)}
-\newcommand{\Diag}[1]{\text{\textup{diag}}\big(#1\big)}
-\newcommand{\DIAG}[1]{\text{\textup{diag}}\Big(#1\Big)}
-\newcommand{\diagi}[1]{\text{\textup{diag}}^{-1}(#1)}
-\newcommand{\Diagi}[1]{\text{\textup{diag}}^{-1}\big(#1\big)}
-\newcommand{\DIAGi}[1]{\text{\textup{diag}}^{-1}\Big(#1\Big)}
-\newcommand{\tr}[1]{\text{\textup{tr}}\big(#1\big)}
-\newcommand{\Tr}[1]{\text{\textup{tr}}\Big(#1\Big)}
+\newcommand{\vecc}[1]{\text{\textup{vec}}\left(#1\right)}
+\newcommand{\vecrm}[1]{\text{\textup{vec}}_{\text{\textup{RM}}}\left(#1\right)}
+
+\newcommand{\mat}[1]{\text{\textup{mat}}\left(#1\right)}
+\newcommand{\matrm }[1]{\text{\textup{mat}}_{\text{\textup{RM}}}\left(#1\right)}
+
+\newcommand{\diag}[1]{\text{\textup{diag}}\left(#1\right)}
+
+% \newcommand{\Diag}[1]{\text{\textup{diag}}\big(#1\big)}
+% \newcommand{\DIAG}[1]{\text{\textup{diag}}\Big(#1\Big)}
+\newcommand{\diagi}[1]{\text{\textup{diag}}^{-1}\left(#1\right)}
+
+% \newcommand{\Diagi}[1]{\text{\textup{diag}}^{-1}\big(#1\big)}
+% \newcommand{\DIAGi}[1]{\text{\textup{diag}}^{-1}\Big(#1\Big)}
+\newcommand{\tr}[1]{\text{\textup{tr}}\left(#1\right)}
+
+% \newcommand{\Tr}[1]{\text{\textup{tr}}\Big(#1\Big)}
 
 \newcommand{\aand}{\quad \text{and} \quad}
 \newcommand{\orr}{\quad \text{or} \quad}
@@ -100,3 +97,7 @@
     title=#1]
     #2
 \end{tcolorbox}}
+
+
+\newcommand{\Norm}[2]{\; \mathcal{N}\left(#1, \, #2\right) \;}
+
