updates to chapter 6

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -288,6 +288,18 @@ Travis E. Oliphant},
  year = {2017}
 }
 
+@article{Ji2019,
+ author = {Ji, Feng and Tay, Wee Peng},
+ doi = {10.1109/TSP.2019.2952055},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {24},
+ pages = {6188-6203},
+ title = {A Hilbert Space Theory of Generalized Graph Signal Processing},
+ url = {https://doi.org/10.1109/TSP.2019.2952055},
+ volume = {67},
+ year = {2019}
+}
+
 @misc{Jiang2012,
  author = {Jiang, Jiaqi},
  title = {Introduction to spectral graph theory},
@@ -475,6 +487,16 @@ Travis E. Oliphant},
  year = {2013}
 }
 
+@book{Smith1995,
+ author = {Smith, W.W. and Smith, J.M.},
+ isbn = {9780780310919},
+ lccn = {95012936},
+ publisher = {Wiley},
+ title = {Handbook of Real-Time Fast Fourier Transforms: Algorithms to Product Testing},
+ url = {https://books.google.co.uk/books?id=MPdSAAAAMAAJ},
+ year = {1995}
+}
+
 @article{Stanley2020,
  author = {Stanley, Jay S. and Chi, Eric C. and Mishne, Gal},
  doi = {10.1109/MSP.2020.3013555},
@@ -503,4 +525,31 @@ Travis E. Oliphant},
  series = {Signal Processing and Digital Filtering},
  title = {Algorithms for discrete Fourier transform and convolution},
  year = {2013}
+}
+
+@inproceedings{Zhang2018,
+ author = {Zhang, Songyang and Zhang, Han and Li, Hang and Cui,
+Shuguang},
+ booktitle = {2018 56th Annual Allerton Conference on Communication,
+Control, and Computing (Allerton)},
+ conference = {2018 56th Annual Allerton Conference on Communication,
+Control, and Computing (Allerton)},
+ location = {Monticello, IL, USA},
+ month = {October},
+ publisher = {IEEE},
+ title = {Tensor-based spectral analysis of cascading failures over
+multilayer complex systems},
+ year = {2018}
+}
+
+@misc{Zhang2022,
+ author = {Zhang, Songyang and Deng, Qinwen and Ding, Zhi},
+ language = {en},
+ month = {October},
+ publisher = {arXiv},
+ shorttitle = {Signal {Processing} over {Multilayer} {Graphs}},
+ title = {Signal {Processing} over {Multilayer} {Graphs}: {Theoretical} {Foundations} and {Practical} {Applications}},
+ url = {http://arxiv.org/abs/2108.13638},
+ urldate = {2023-03-07},
+ year = {2022}
 }
