--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -8,17 +8,12 @@
 \newcommand{\mat}[1]{\text{\textup{mat}}\left(#1\right)}
 \newcommand{\matrm }[1]{\text{\textup{mat}}_{\text{\textup{RM}}}\left(#1\right)}
 
+\newcommand{\tenrm}[1]{\text{\textup{ten}}_{\text{\textup{RM}}}\left(#1\right)}
+
 \newcommand{\diag}[1]{\text{\textup{diag}}\left(#1\right)}
-
-% \newcommand{\Diag}[1]{\text{\textup{diag}}\big(#1\big)}
-% \newcommand{\DIAG}[1]{\text{\textup{diag}}\Big(#1\Big)}
 \newcommand{\diagi}[1]{\text{\textup{diag}}^{-1}\left(#1\right)}
-
-% \newcommand{\Diagi}[1]{\text{\textup{diag}}^{-1}\big(#1\big)}
-% \newcommand{\DIAGi}[1]{\text{\textup{diag}}^{-1}\Big(#1\Big)}
 \newcommand{\tr}[1]{\text{\textup{tr}}\left(#1\right)}
 
-% \newcommand{\Tr}[1]{\text{\textup{tr}}\Big(#1\Big)}
 
 \newcommand{\aand}{\quad \text{and} \quad}
 \newcommand{\orr}{\quad \text{or} \quad}
@@ -72,12 +67,27 @@
 \newcommand{\rr}{\mathbf{r}}
 \newcommand{\s}{\mathbf{s}}
 \newcommand{\z}{\mathbf{z}}
+\newcommand{\jj}{\mathbf{j}}
 \newcommand{\e}{\mathbf{e}}
 \newcommand{\g}{\mathbf{g}}
 \newcommand{\tee}{\mathbf{t}}
 \newcommand{\ve}{\mathbf{v}}
 \newcommand{\uu}{\mathbf{u}}
+\newcommand{\nn}{\mathbf{n}}
 
+
+\DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
+
+\newcommand{\Yt}{\mathbfcal{Y}}
+\newcommand{\Ft}{\mathbfcal{F}}
+\newcommand{\Gt}{\mathbfcal{G}}
+\newcommand{\Jt}{\mathbfcal{J}}
+\newcommand{\St}{\mathbfcal{S}}
+\newcommand{\Zt}{\mathbfcal{Z}}
+\newcommand{\Et}{\mathbfcal{E}}
+\newcommand{\At}{\mathbfcal{A}}
+\newcommand{\Dt}{\mathbfcal{D}}
+\newcommand{\Rt}{\mathbfcal{R}}
 
 
 \newcommand{\muu}{\boldsymbol{\mu}}
@@ -86,7 +96,6 @@
 \newcommand{\betaa}{\boldsymbol{\beta}}
 \newcommand{\lambdaa}{\boldsymbol{\lambda}}
 
-\DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
 \newcommand{\note}[2]{\begin{tcolorbox}[colback=gray!5!white,
     colframe=gray!50!black,
