--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -112,6 +112,23 @@ and Li, Xuelong},
  year = {2009}
 }
 
+@article{Cichocki2015,
+ author = {Cichocki, Andrzej and Mandic, Danilo and De Lathauwer, Lieven and Zhou, Guoxu and Zhao, Qibin and Caiafa, Cesar and Phan, Huy Anh},
+ doi = {10.1109/MSP.2013.2297439},
+ issn = {1053-5888},
+ journal = {IEEE Signal Processing Magazine},
+ language = {en},
+ month = {March},
+ number = {2},
+ pages = {145--163},
+ shorttitle = {Tensor {Decompositions} for {Signal} {Processing} {Applications}},
+ title = {Tensor {Decompositions} for {Signal} {Processing} {Applications}: {From} two-way to multiway component analysis},
+ url = {https://doi.org/10.1109/MSP.2013.2297439},
+ urldate = {2022-11-21},
+ volume = {32},
+ year = {2015}
+}
+
 @article{Cooley1965,
  author = {Cooley, James W. and Tukey, John W.},
  doi = {10.1090/S0025-5718-1965-0178586-1},
@@ -326,6 +343,17 @@ Travis E. Oliphant},
  year = {1995}
 }
 
+@book{Kroonenberg2008,
+ address = {Hoboken, NJ},
+ author = {Kroonenberg, Pieter M},
+ language = {en},
+ month = {January},
+ publisher = {Wiley-Blackwell},
+ series = {Wiley Series in Probability and Statistics},
+ title = {Applied Multiway Data Analysis},
+ year = {2008}
+}
+
 @inproceedings{LeMagoarou2016,
  address = {Shanghai},
  author = {LeMagoarou, Luc and Gribonval, Remi},
@@ -485,6 +513,16 @@ Travis E. Oliphant},
  url = {https://doi.org/10.1109/MSP.2012.2235192},
  volume = {30},
  year = {2013}
+}
+
+@book{Smilde2004,
+ address = {Nashville, TN},
+ author = {Smilde, Age and Bro, Rasmus and Geladi, Paul},
+ language = {en},
+ month = {August},
+ publisher = {John Wiley \& Sons},
+ title = {Multi-way analysis},
+ year = {2004}
 }
 
 @book{Smith1995,
