--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -370,6 +370,17 @@ Travis E. Oliphant},
  year = {2016}
 }
 
+@book{Little2019,
+ author = {Little, R.J.A. and Rubin, D.B.},
+ isbn = {9780470526798},
+ lccn = {2018058860},
+ publisher = {Wiley},
+ series = {Wiley Series in Probability and Statistics},
+ title = {Statistical Analysis with Missing Data},
+ url = {https://books.google.co.uk/books?id=BemMDwAAQBAJ},
+ year = {2019}
+}
+
 @inproceedings{Loukas2016,
  author = {Loukas, Andreas and Foucard, Damien},
  booktitle = {2016 IEEE Global Conference on Signal and Information Processing (GlobalSIP)},
