--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -78,6 +78,7 @@
 
 \DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
+\newcommand{\Xt}{\mathbfcal{X}}
 \newcommand{\Yt}{\mathbfcal{Y}}
 \newcommand{\Ft}{\mathbfcal{F}}
 \newcommand{\Gt}{\mathbfcal{G}}
