--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -405,6 +405,18 @@ Travis E. Oliphant},
  year = {1980}
 }
 
+@article{Miao2022,
+ author = {Miao, Xiaoyu and Jiang, Aimin and Zhu, Yanping and Kwan, Hon Keung},
+ doi = {10.1016/j.sigpro.2022.108708},
+ issn = {0165-1684},
+ journal = {Signal Processing},
+ pages = {108708},
+ title = {A joint learning framework for Gaussian processes regression and graph learning},
+ url = {https://doi.org/10.1016/j.sigpro.2022.108708},
+ volume = {201},
+ year = {2022}
+}
+
 @book{Mieghem2010,
  author = {Mieghem, Piet van},
  doi = {10.1017/CBO9780511921681},
