introductions for ch4 and ch5

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -161,6 +161,18 @@ and Li, Xuelong},
  year = {1997}
 }
 
+@article{Elias2022,
+ author = {Elias, Vitor Rosa Meireles and Gogineni, Vinay Chakravarthi and Martins, Wallace A. and Werner, Stefan},
+ doi = {10.1109/TSP.2022.3149134},
+ journal = {IEEE Transactions on Signal Processing},
+ number = {},
+ pages = {936-949},
+ title = {Kernel Regression Over Graphs Using Random Fourier Features},
+ url = {https://doi.org/10.1109/TSP.2022.3149134},
+ volume = {70},
+ year = {2022}
+}
+
 @phdthesis{Elman1982,
  author = {Elman, Howard C.},
  title = {Iterative methods for large, sparse, nonsymmetric systems of linear equations},
@@ -354,6 +366,20 @@ Travis E. Oliphant},
  year = {2008}
 }
 
+@article{Le2022,
+ author = {Le, Can M. and Li, Tianxi},
+ doi = {10.1111/rssb.12554},
+ issn = {1369-7412},
+ journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+ month = {11},
+ number = {5},
+ pages = {1851-1885},
+ title = {{Linear Regression and Its Inference on Noisy Network-Linked Data}},
+ url = {https://doi.org/10.1111/rssb.12554},
+ volume = {84},
+ year = {2022}
+}
+
 @inproceedings{LeMagoarou2016,
  address = {Shanghai},
  author = {LeMagoarou, Luc and Gribonval, Remi},
@@ -368,6 +394,19 @@ Travis E. Oliphant},
  url = {https://doi.org/10.1109/ICASSP.2016.7472591},
  urldate = {2023-02-07},
  year = {2016}
+}
+
+@article{Li2019,
+ author = {Li, Tianxi and Levina, Elizaveta and Zhu, Ji},
+ doi = {10.1214/18-AOAS1205},
+ journal = {The Annals of Applied Statistics},
+ number = {1},
+ pages = {132 -- 164},
+ publisher = {Institute of Mathematical Statistics},
+ title = {{Prediction models for network-linked data}},
+ url = {https://doi.org/10.1214/18-AOAS1205},
+ volume = {13},
+ year = {2019}
 }
 
 @book{Little2019,
@@ -459,6 +498,18 @@ Travis E. Oliphant},
  url = {https://doi.org/10.1090/s0025-5718-1973-0395196-6},
  volume = {27},
  year = {1973}
+}
+
+@article{Qiu2017,
+ author = {Qiu, Kai and Mao, Xianghui and Shen, Xinyue and Wang, Xiaohan and Li, Tiejian and Gu, Yuantao},
+ doi = {10.1109/JSTSP.2017.2726969},
+ journal = {IEEE Journal of Selected Topics in Signal Processing},
+ number = {6},
+ pages = {870-883},
+ title = {Time-Varying Graph Signal Reconstruction},
+ url = {https://doi.org/10.1109/JSTSP.2017.2726969},
+ volume = {11},
+ year = {2017}
 }
 
 @book{Rao1990,
@@ -586,6 +637,30 @@ Travis E. Oliphant},
  series = {Signal Processing and Digital Filtering},
  title = {Algorithms for discrete Fourier transform and convolution},
  year = {2013}
+}
+
+@article{Venkitaraman2019,
+ author = {Venkitaraman, Arun and Chatterjee, Saikat and Händel, Peter},
+ doi = {10.1109/TSIPN.2019.2936358},
+ journal = {IEEE Transactions on Signal and Information Processing over Networks},
+ number = {4},
+ pages = {698-710},
+ title = {Predicting Graph Signals Using Kernel Regression Where the Input Signal is Agnostic to a Graph},
+ url = {https://doi.org/10.1109/TSIPN.2019.2936358},
+ volume = {5},
+ year = {2019}
+}
+
+@inproceedings{Venkitaraman2020,
+ author = {Venkitaraman, Arun and Chatterjee, Saikat and Handel, Peter},
+ booktitle = {ICASSP 2020 - 2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ doi = {10.1109/ICASSP40776.2020.9053859},
+ number = {},
+ pages = {5640-5644},
+ title = {Gaussian Processes Over Graphs},
+ url = {https://doi.org/10.1109/ICASSP40776.2020.9053859},
+ volume = {},
+ year = {2020}
 }
 
 @inproceedings{Zhang2018,
