--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -522,6 +522,17 @@ Travis E. Oliphant},
  year = {1990}
 }
 
+@book{Rasmussen2005,
+ author = {Rasmussen, Carl Edward and Williams, Christopher K. I.},
+ doi = {10.7551/mitpress/3206.001.0001},
+ isbn = {9780262256834},
+ month = {11},
+ publisher = {The MIT Press},
+ title = {{Gaussian Processes for Machine Learning}},
+ url = {https://doi.org/10.7551/mitpress/3206.001.0001},
+ year = {2005}
+}
+
 @book{Renteln2013,
  author = {Renteln, P.},
  isbn = {9781107659698},
