--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -355,6 +355,36 @@ Travis E. Oliphant},
  year = {1995}
 }
 
+@article{Kiers2000,
+ author = {Kiers, Henk A. L.},
+ doi = {https://doi.org/10.1002/1099-128X(200005/06)14:3<105::AID-CEM582>3.0.CO;2-I},
+ journal = {Journal of Chemometrics},
+ number = {3},
+ pages = {105-122},
+ title = {Towards a standardized notation and terminology in multiway analysis},
+ url = {https://doi.org/https://doi.org/10.1002/1099-128X(200005/06)14:3<105::AID-CEM582>3.0.CO;2-I},
+ volume = {14},
+ year = {2000}
+}
+
+@article{Kolda2009,
+ author = {Kolda, Tamara G. and Bader, Brett W.},
+ doi = {10.1137/07070111X},
+ eprint = { 
+
+https://doi.org/10.1137/07070111X
+
+
+},
+ journal = {SIAM Review},
+ number = {3},
+ pages = {455-500},
+ title = {Tensor Decompositions and Applications},
+ url = {https://doi.org/10.1137/07070111X},
+ volume = {51},
+ year = {2009}
+}
+
 @book{Kroonenberg2008,
  address = {Hoboken, NJ},
  author = {Kroonenberg, Pieter M},
@@ -699,4 +729,16 @@ multilayer complex systems},
  url = {http://arxiv.org/abs/2108.13638},
  urldate = {2023-03-07},
  year = {2022}
+}
+
+@article{Zhao2023,
+ author = {Zhao, Xusheng and Dai, Qiong and Wu, Jia and Peng, Hao and Liu, Mingsheng and Bai, Xu and Tan, Jianlong and Wang, Senzhang and Yu, Philip S.},
+ doi = {10.1109/TKDE.2022.3142179},
+ journal = {IEEE Transactions on Knowledge and Data Engineering},
+ number = {4},
+ pages = {4077-4091},
+ title = {Multi-View Tensor Graph Neural Networks Through Reinforced Aggregation},
+ url = {https://doi.org/10.1109/TKDE.2022.3142179},
+ volume = {35},
+ year = {2023}
 }
