--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -61,6 +61,8 @@
 
 
 \newcommand{\y}{\mathbf{y}}
+\newcommand{\cc}{\mathbf{c}}
+\newcommand{\w}{\mathbf{w}}
 \newcommand{\bb}{\mathbf{b}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\f}{\mathbf{f}}
