lots of changes

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -374,7 +374,6 @@ Travis E. Oliphant},
 
 https://doi.org/10.1137/07070111X
 
-
 },
  journal = {SIAM Review},
  number = {3},
@@ -424,6 +423,18 @@ https://doi.org/10.1137/07070111X
  url = {https://doi.org/10.1109/ICASSP.2016.7472591},
  urldate = {2023-02-07},
  year = {2016}
+}
+
+@article{Li2012,
+ author = {Li, Jun and Bioucas-Dias, José M. and Plaza, Antonio},
+ doi = {10.1109/TGRS.2011.2162649},
+ journal = {IEEE Transactions on Geoscience and Remote Sensing},
+ number = {3},
+ pages = {809-823},
+ title = {Spectral–Spatial Hyperspectral Image Segmentation Using Subspace Multinomial Logistic Regression and Markov Random Fields},
+ url = {https://doi.org/10.1109/TGRS.2011.2162649},
+ volume = {50},
+ year = {2012}
 }
 
 @article{Li2019,
@@ -665,6 +676,18 @@ https://doi.org/10.1137/07070111X
  urldate = {2022-11-04},
  volume = {37},
  year = {2020}
+}
+
+@article{Takeda2007,
+ author = {Takeda, Hiroyuki and Farsiu, Sina and Milanfar, Peyman},
+ doi = {10.1109/TIP.2006.888330},
+ journal = {IEEE Transactions on Image Processing},
+ number = {2},
+ pages = {349-366},
+ title = {Kernel Regression for Image Processing and Reconstruction},
+ url = {https://doi.org/10.1109/TIP.2006.888330},
+ volume = {16},
+ year = {2007}
 }
 
 @book{Tolimieri2013,
