--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,4 @@
-\documentclass[11pt, oneside]{Thesis} % The default font size and one-sided printing (no margin offsets)
-
+\documentclass[11pt, oneside]{Thesis} 
 
 \input{Setup/metadata}
 
