--- a/Setup/packages.tex
+++ b/Setup/packages.tex
@@ -6,7 +6,8 @@
 			multirow, 
 			cleveref, 
 			booktabs, 
-            wrapfig}
+            wrapfig, 
+            makecell}
 
 \usepackage[table]{xcolor}
 
