--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -86,6 +86,7 @@
 \newcommand{\Gt}{\mathbfcal{G}}
 \newcommand{\Jt}{\mathbfcal{J}}
 \newcommand{\St}{\mathbfcal{S}}
+\newcommand{\Qt}{\mathbfcal{Q}}
 \newcommand{\Zt}{\mathbfcal{Z}}
 \newcommand{\Et}{\mathbfcal{E}}
 \newcommand{\At}{\mathbfcal{A}}
