updates to ch 6

--- a/Setup/commands.tex
+++ b/Setup/commands.tex
@@ -81,6 +81,7 @@
 \DeclareMathAlphabet\mathbfcal{OMS}{cmsy}{b}{n}
 
 \newcommand{\Xt}{\mathbfcal{X}}
+\newcommand{\Ct}{\mathbfcal{C}}
 \newcommand{\Yt}{\mathbfcal{Y}}
 \newcommand{\Ft}{\mathbfcal{F}}
 \newcommand{\Gt}{\mathbfcal{G}}
@@ -92,6 +93,8 @@
 \newcommand{\At}{\mathbfcal{A}}
 \newcommand{\Dt}{\mathbfcal{D}}
 \newcommand{\Rt}{\mathbfcal{R}}
+\newcommand{\Omegat}{\bm{\mathit{\Omega}}}
+
 
 
 \newcommand{\muu}{\boldsymbol{\mu}}
