--- a/Setup/packages.tex
+++ b/Setup/packages.tex
@@ -7,7 +7,8 @@
 			cleveref, 
 			booktabs, 
             wrapfig, 
-            makecell}
+            makecell, 
+            bm}
 
 \usepackage[table]{xcolor}
 
